# DSPRJ

./: README.md  setup.cfg
src/DSPRJ.egg-info/: PKG-INFO  SOURCES.txt
src/mypkg/: __init__.py  player.py  standings.py  team.py  team_ratings.py  wins.py
